crates/spelldawn/tests/it/core/snapshots/it__core__raid_tests__raid_no_defenders.snap
---
source: crates/spelldawn/tests/it/core/raid_tests.rs
assertion_line: 516
expression: "Summary::summarize(&response)"
---

command_list: 
    MoveGameObjects: 
        id: Identity(User)
        position: 
            sorting_key: 0
            position: ObjectPositionIdentityContainer { owner: User }
    UpdateGameView: 
        user: 
            side: Champion
            player_info: 
            valid_rooms_to_visit: 
            action_tracker: 2
            can_take_action: true
        raid_active: true
    CreateOrUpdateCard: 
        card: 
            card_id: O45
            revealed_to_viewer: true
            is_face_up: false
            owning_player: Opponent
            revealed_card: 
                card_frame: "<SpriteAddress>"
                title_background: "<SpriteAddress>"
                jewel: "<SpriteAddress>"
                image: "<SpriteAddress>"
                title: "Test Scheme 31"
                rules_text: "<RulesText>"
                targeting: 
                valid_rooms: 
                on_release_position: 
                    sorting_key: 4294967295
                    position: ObjectPositionRoom { room_id: Unspecified, room_location: Back }
        create_position: 
            sorting_key: 2
            position: ObjectPositionRoom { room_id: RoomA, room_location: Back }
        create_animation: Unspecified
    CreateOrUpdateCard: 
        card: 
            card_id: C1
            revealed_to_viewer: true
            is_face_up: false
            owning_player: User
            revealed_card: 
                targeting: 
                    can_play: false
        create_position: 
            sorting_key: 4
            position: ObjectPositionHand { owner: User }
        create_animation: Unspecified
    MoveGameObjects: 
        id: O45
        position: 
            sorting_key: 0
            position: ObjectPositionBrowser
    RenderInterface: 
    panels: 
        main_controls: 
            node: 
                text: "End Raid"
        card_anchor_nodes: 
            card_id: O45
            node: 
                text: "Score!"
        anchors: 
            node_corner: TopLeft
            card_corner: BottomLeft
            node_corner: TopRight
            card_corner: BottomRight
channel_response: 
    VisitRoom: 
        initiator: Opponent
        room_id: RoomA
        visit_type: InitiateRaid
    Delay: 500
    MoveGameObjects: 
        id: Identity(Opponent)
        position: 
            sorting_key: 0
            position: ObjectPositionIdentityContainer { owner: Opponent }
    UpdateGameView: 
        opponent: 
            side: Champion
            player_info: 
            valid_rooms_to_visit: 
            action_tracker: 2
            can_take_action: true
        raid_active: true
    MoveGameObjects: 
        id: O45
        position: 
            sorting_key: 0
            position: ObjectPositionBrowser
    RenderInterface: 
    panels: 
        main_controls: 
            node: 
                text: "Waiting for Opponent..."
        card_anchor_nodes: 
