crates/spelldawn/tests/it/core/snapshots/it__core__raid_tests__raid_sanctum.snap
---
source: crates/spelldawn/tests/it/core/raid_tests.rs
assertion_line: 432
expression: "Summary::summarize(&response)"
---

command_list: 
    FireProjectile: 
        source_id: C45
        target_id: O44
        projectile: "<ProjectileAddress>"
        travel_duration: 300
        wait_duration: 300
    UpdateGameView: 
        user: 
            side: Champion
            mana: 995
            can_take_action: true
        raid_active: true
    CreateOrUpdateCard: 
        card: 
            card_id: O45
            revealed_to_viewer: true
            is_face_up: false
            card_icons: 
            owning_player: Opponent
            revealed_card: 
                card_frame: "<SpriteAddress>"
                title_background: "<SpriteAddress>"
                jewel: "<SpriteAddress>"
                image: "<SpriteAddress>"
                title: "Test Scheme 31"
                rules_text: "<RulesText>"
                targeting: 
                valid_rooms: 
                on_release_position: 
                    sorting_key: 4294967295
                    position: ObjectPositionRoom { room_id: Unspecified, room_location: Back }
        create_position: 
            sorting_key: 1
            position: ObjectPositionHand { owner: Opponent }
        create_animation: Unspecified
    RunInParallel: 
        MoveGameObjects: 
            id: O44
            position: 
                sorting_key: 3
                position: ObjectPositionRoom { room_id: Sanctum, room_location: Front }
        MoveGameObjects: 
            id: O45
            position: 
                sorting_key: 0
                position: ObjectPositionBrowser
        MoveGameObjects: 
            id: Identity(User)
            position: 
                sorting_key: 0
                position: ObjectPositionIdentityContainer { owner: User }
        MoveGameObjects: 
            id: Identity(Opponent)
            position: 
                sorting_key: 0
                position: ObjectPositionIdentityContainer { owner: Opponent }
    RenderInterface: 
    panels: 
        main_controls: 
            node: 
                text: "End Raid"
        card_anchor_nodes: 
            card_id: O45
            node: 
                text: "Score!"
        anchors: 
            node_corner: TopLeft
            card_corner: BottomLeft
            node_corner: TopRight
            card_corner: BottomRight
channel_response: 
    FireProjectile: 
        source_id: C45
        target_id: O44
        projectile: "<ProjectileAddress>"
        travel_duration: 300
        wait_duration: 300
    UpdateGameView: 
        opponent: 
            side: Champion
            mana: 995
            can_take_action: true
        raid_active: true
    RunInParallel: 
        MoveGameObjects: 
            id: O44
            position: 
                sorting_key: 3
                position: ObjectPositionRoom { room_id: Sanctum, room_location: Front }
        MoveGameObjects: 
            id: O45
            position: 
                sorting_key: 0
                position: ObjectPositionBrowser
        MoveGameObjects: 
            id: Identity(User)
            position: 
                sorting_key: 0
                position: ObjectPositionIdentityContainer { owner: User }
        MoveGameObjects: 
            id: Identity(Opponent)
            position: 
                sorting_key: 0
                position: ObjectPositionIdentityContainer { owner: Opponent }
